--- a/src/main/ui/package.json
+++ b/src/main/ui/package.json
@@ -1,10 +1,11 @@
 {
   "name": "angular-example",
-  "version": "0.0.0",
+  "version": "0.0.1-SNAPSHOT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-prod": "ng build --prod --deploy-url /ui/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
